// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders SearchPage for posts 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 255)",
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 60,
        },
        Object {
          "marginHorizontal": 16,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "flex": 8,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "color": "#000000",
                    "fontFamily": "System",
                    "fontSize": 22,
                    "fontWeight": "400",
                    "letterSpacing": 0.34375,
                    "lineHeight": 28,
                  },
                  false,
                  false,
                  false,
                  Array [
                    Object {
                      "color": "rgba(0,0,0,0.87)",
                    },
                    Object {
                      "backgroundColor": "transparent",
                      "fontFamily": "System",
                      "fontWeight": "600",
                    },
                    Array [
                      Object {
                        "flex": 1,
                      },
                      undefined,
                    ],
                  ],
                ]
              }
            >
              Search
            </Text>
            <ActivityIndicator
              animating={false}
              color="rgba(0, 122, 255, 255)"
              hidesWhenStopped={true}
              size="small"
              style={
                Object {
                  "marginLeft": 8,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
    <View
      accessible={true}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 15,
          "left": 15,
          "right": 15,
          "top": 15,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Object {
            "color": "rgba(0,0,0,0.87)",
            "fontFamily": "Ionicons",
            "fontSize": 24,
            "fontStyle": "normal",
            "fontWeight": "normal",
          }
        }
        text="ionicon-search"
      />
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#F5F5F5",
          "elevation": 1,
          "flex": 1,
          "flexDirection": "row",
          "height": 40,
          "maxHeight": 40,
          "shadowColor": "rgba(0, 0, 0, 255)",
          "shadowOffset": Object {
            "x": 0,
            "y": 0,
          },
          "shadowOpacity": 0.18,
          "shadowRadius": 1,
        },
        Object {
          "borderBottomLeftRadius": 20,
          "borderBottomRightRadius": 20,
          "borderTopLeftRadius": 20,
          "borderTopRightRadius": 20,
        },
        Object {
          "marginHorizontal": 16,
        },
      ]
    }
    testID="segmented-control"
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "borderBottomLeftRadius": 20,
          "borderBottomRightRadius": 20,
          "borderTopLeftRadius": 20,
          "borderTopRightRadius": 20,
          "flex": 1,
          "flexDirection": "row",
          "height": "100%",
          "justifyContent": "center",
          "opacity": 1,
          "paddingHorizontal": 16,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "color": "#FFFFFF",
              "fontFamily": "System",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": -0.32,
              "lineHeight": 21,
            },
            Array [
              Object {
                "color": "rgba(0,0,0,0.38)",
              },
              Object {
                "backgroundColor": "transparent",
                "fontFamily": "System",
                "fontWeight": "700",
              },
              undefined,
            ],
          ]
        }
      >
        Users
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(0, 122, 255, 255)",
          "borderBottomLeftRadius": 20,
          "borderBottomRightRadius": 20,
          "borderTopLeftRadius": 20,
          "borderTopRightRadius": 20,
          "elevation": 4,
          "flex": 1,
          "flexDirection": "row",
          "height": "100%",
          "justifyContent": "center",
          "opacity": 1,
          "paddingHorizontal": 24,
          "shadowColor": "rgba(0, 0, 0, 255)",
          "shadowOffset": Object {
            "x": 0,
            "y": 2,
          },
          "shadowOpacity": 0.23,
          "shadowRadius": 2.62,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "color": "#FFFFFF",
              "fontFamily": "System",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": -0.32,
              "lineHeight": 21,
            },
            Array [
              Object {
                "color": "rgba(255, 255, 255, 255)",
              },
              Object {
                "backgroundColor": "transparent",
                "fontFamily": "System",
                "fontWeight": "700",
              },
              undefined,
            ],
          ]
        }
      >
        Posts
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "rgba(255, 255, 255, 255)",
        "flex": 1,
      }
    }
  >
    <RCTScrollView
      ListHeaderComponent={[Function]}
      contentContainerStyle={
        Object {
          "paddingBottom": 30,
        }
      }
      data={
        Array [
          "first post",
          "covid19",
        ]
      }
      disableVirtualization={false}
      getItem={[Function]}
      getItemCount={[Function]}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      onContentSizeChange={[Function]}
      onEndReachedThreshold={2}
      onLayout={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      removeClippedSubviews={true}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={Array []}
      updateCellsBatchingPeriod={50}
      viewabilityConfigCallbackPairs={Array []}
      windowSize={21}
    >
      <View>
        <View
          onLayout={[Function]}
        >
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                },
                Object {
                  "paddingHorizontal": 16,
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  Object {
                    "color": "rgba(0,0,0,0.87)",
                    "fontFamily": "Ionicons",
                    "fontSize": 18,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "marginRight": 8,
                  }
                }
                text="ionicon-md-time"
              />
              <Text
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "color": "#000000",
                      "fontFamily": "System",
                      "fontSize": 17,
                      "fontWeight": "400",
                      "letterSpacing": -0.408,
                      "lineHeight": 22,
                    },
                    Array [
                      Object {
                        "color": "rgba(0,0,0,0.38)",
                      },
                      Object {
                        "backgroundColor": "transparent",
                        "fontFamily": "System",
                        "fontWeight": "600",
                      },
                      Object {
                        "backgroundColor": "transparent",
                        "color": "rgba(0,0,0,0.87)",
                        "fontFamily": "System",
                        "fontWeight": "600",
                        "marginVertical": 18.46153846153846,
                      },
                    ],
                  ]
                }
              >
                Recent searches
              </Text>
            </View>
            <Text
              onPress={[Function]}
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "color": "#000000",
                    "fontFamily": "System",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "letterSpacing": -0.32,
                    "lineHeight": 21,
                  },
                  Array [
                    Object {
                      "color": "rgba(0,0,0,0.87)",
                    },
                    Object {
                      "backgroundColor": "transparent",
                      "fontFamily": "System",
                      "fontWeight": "400",
                    },
                    Array [
                      Object {
                        "backgroundColor": "transparent",
                        "color": "rgba(0,0,0,0.87)",
                        "fontFamily": "System",
                        "fontWeight": "600",
                        "marginVertical": 18.46153846153846,
                      },
                      Object {
                        "backgroundColor": "transparent",
                        "color": "rgba(0, 122, 255, 255)",
                        "fontFamily": "System",
                        "fontWeight": "700",
                      },
                    ],
                  ],
                ]
              }
            >
              Clear all
            </Text>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "flex": 1,
                "height": "100%",
                "justifyContent": "center",
                "paddingHorizontal": 16,
              }
            }
            testID="history-item"
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "borderBottomColor": "rgba(229, 229, 234, 255)",
                  "borderBottomWidth": 1,
                  "flexDirection": "row",
                  "height": 50,
                  "justifyContent": "space-between",
                }
              }
            >
              <Text
                style={
                  Array [
                    false,
                    Object {
                      "backgroundColor": "transparent",
                      "color": "#000000",
                      "fontFamily": "System",
                      "fontSize": 17,
                      "fontWeight": "600",
                      "letterSpacing": -0.408,
                      "lineHeight": 22,
                    },
                    false,
                    false,
                    Array [
                      Object {
                        "color": "rgba(0,0,0,0.87)",
                      },
                      Object {
                        "backgroundColor": "transparent",
                        "fontFamily": "System",
                        "fontWeight": "400",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                first post
              </Text>
              <View
                accessible={true}
                focusable={true}
                hitSlop={
                  Object {
                    "bottom": 50,
                    "left": 50,
                    "right": 50,
                    "top": 50,
                  }
                }
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#F5F5F5",
                    "borderRadius": 10,
                    "height": 22,
                    "justifyContent": "center",
                    "opacity": 1,
                    "width": 22,
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  style={
                    Object {
                      "color": "rgba(0,0,0,0.87)",
                      "fontFamily": "Ionicons",
                      "fontSize": 25,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    }
                  }
                  text="ionicon-ios-close"
                />
              </View>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "flex": 1,
                "height": "100%",
                "justifyContent": "center",
                "paddingHorizontal": 16,
              }
            }
            testID="history-item"
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "borderBottomColor": "rgba(229, 229, 234, 255)",
                  "borderBottomWidth": 1,
                  "flexDirection": "row",
                  "height": 50,
                  "justifyContent": "space-between",
                }
              }
            >
              <Text
                style={
                  Array [
                    false,
                    Object {
                      "backgroundColor": "transparent",
                      "color": "#000000",
                      "fontFamily": "System",
                      "fontSize": 17,
                      "fontWeight": "600",
                      "letterSpacing": -0.408,
                      "lineHeight": 22,
                    },
                    false,
                    false,
                    Array [
                      Object {
                        "color": "rgba(0,0,0,0.87)",
                      },
                      Object {
                        "backgroundColor": "transparent",
                        "fontFamily": "System",
                        "fontWeight": "400",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                covid19
              </Text>
              <View
                accessible={true}
                focusable={true}
                hitSlop={
                  Object {
                    "bottom": 50,
                    "left": 50,
                    "right": 50,
                    "top": 50,
                  }
                }
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#F5F5F5",
                    "borderRadius": 10,
                    "height": 22,
                    "justifyContent": "center",
                    "opacity": 1,
                    "width": 22,
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  style={
                    Object {
                      "color": "rgba(0,0,0,0.87)",
                      "fontFamily": "Ionicons",
                      "fontSize": 25,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    }
                  }
                  text="ionicon-ios-close"
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`renders SearchPage for users 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 255)",
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 60,
        },
        Object {
          "marginHorizontal": 16,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "flex": 8,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "color": "#000000",
                    "fontFamily": "System",
                    "fontSize": 22,
                    "fontWeight": "400",
                    "letterSpacing": 0.34375,
                    "lineHeight": 28,
                  },
                  false,
                  false,
                  false,
                  Array [
                    Object {
                      "color": "rgba(0,0,0,0.87)",
                    },
                    Object {
                      "backgroundColor": "transparent",
                      "fontFamily": "System",
                      "fontWeight": "600",
                    },
                    Array [
                      Object {
                        "flex": 1,
                      },
                      undefined,
                    ],
                  ],
                ]
              }
            >
              Search
            </Text>
            <ActivityIndicator
              animating={false}
              color="rgba(0, 122, 255, 255)"
              hidesWhenStopped={true}
              size="small"
              style={
                Object {
                  "marginLeft": 8,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
    <View
      accessible={true}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 15,
          "left": 15,
          "right": 15,
          "top": 15,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Object {
            "color": "rgba(0,0,0,0.87)",
            "fontFamily": "Ionicons",
            "fontSize": 24,
            "fontStyle": "normal",
            "fontWeight": "normal",
          }
        }
        text="ionicon-search"
      />
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#F5F5F5",
          "elevation": 1,
          "flex": 1,
          "flexDirection": "row",
          "height": 40,
          "maxHeight": 40,
          "shadowColor": "rgba(0, 0, 0, 255)",
          "shadowOffset": Object {
            "x": 0,
            "y": 0,
          },
          "shadowOpacity": 0.18,
          "shadowRadius": 1,
        },
        Object {
          "borderBottomLeftRadius": 20,
          "borderBottomRightRadius": 20,
          "borderTopLeftRadius": 20,
          "borderTopRightRadius": 20,
        },
        Object {
          "marginHorizontal": 16,
        },
      ]
    }
    testID="segmented-control"
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(0, 122, 255, 255)",
          "borderBottomLeftRadius": 20,
          "borderBottomRightRadius": 20,
          "borderTopLeftRadius": 20,
          "borderTopRightRadius": 20,
          "elevation": 4,
          "flex": 1,
          "flexDirection": "row",
          "height": "100%",
          "justifyContent": "center",
          "opacity": 1,
          "paddingHorizontal": 24,
          "shadowColor": "rgba(0, 0, 0, 255)",
          "shadowOffset": Object {
            "x": 0,
            "y": 2,
          },
          "shadowOpacity": 0.23,
          "shadowRadius": 2.62,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "color": "#FFFFFF",
              "fontFamily": "System",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": -0.32,
              "lineHeight": 21,
            },
            Array [
              Object {
                "color": "rgba(255, 255, 255, 255)",
              },
              Object {
                "backgroundColor": "transparent",
                "fontFamily": "System",
                "fontWeight": "700",
              },
              undefined,
            ],
          ]
        }
      >
        Users
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "borderBottomLeftRadius": 20,
          "borderBottomRightRadius": 20,
          "borderTopLeftRadius": 20,
          "borderTopRightRadius": 20,
          "flex": 1,
          "flexDirection": "row",
          "height": "100%",
          "justifyContent": "center",
          "opacity": 1,
          "paddingHorizontal": 16,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "color": "#FFFFFF",
              "fontFamily": "System",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": -0.32,
              "lineHeight": 21,
            },
            Array [
              Object {
                "color": "rgba(0,0,0,0.38)",
              },
              Object {
                "backgroundColor": "transparent",
                "fontFamily": "System",
                "fontWeight": "700",
              },
              undefined,
            ],
          ]
        }
      >
        Posts
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "rgba(255, 255, 255, 255)",
        "flex": 1,
      }
    }
  >
    <RCTScrollView
      ListHeaderComponent={[Function]}
      contentContainerStyle={
        Object {
          "paddingBottom": 30,
        }
      }
      data={
        Array [
          "john",
          "doe",
        ]
      }
      disableVirtualization={false}
      getItem={[Function]}
      getItemCount={[Function]}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      onContentSizeChange={[Function]}
      onEndReachedThreshold={2}
      onLayout={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      removeClippedSubviews={true}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={Array []}
      updateCellsBatchingPeriod={50}
      viewabilityConfigCallbackPairs={Array []}
      windowSize={21}
    >
      <View>
        <View
          onLayout={[Function]}
        >
          <View
            style={
              Array [
                Object {
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                },
                Object {
                  "paddingHorizontal": 16,
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  Object {
                    "color": "rgba(0,0,0,0.87)",
                    "fontFamily": "Ionicons",
                    "fontSize": 18,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "marginRight": 8,
                  }
                }
                text="ionicon-md-time"
              />
              <Text
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "color": "#000000",
                      "fontFamily": "System",
                      "fontSize": 17,
                      "fontWeight": "400",
                      "letterSpacing": -0.408,
                      "lineHeight": 22,
                    },
                    Array [
                      Object {
                        "color": "rgba(0,0,0,0.38)",
                      },
                      Object {
                        "backgroundColor": "transparent",
                        "fontFamily": "System",
                        "fontWeight": "600",
                      },
                      Object {
                        "backgroundColor": "transparent",
                        "color": "rgba(0,0,0,0.87)",
                        "fontFamily": "System",
                        "fontWeight": "600",
                        "marginVertical": 18.46153846153846,
                      },
                    ],
                  ]
                }
              >
                Recent searches
              </Text>
            </View>
            <Text
              onPress={[Function]}
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "color": "#000000",
                    "fontFamily": "System",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "letterSpacing": -0.32,
                    "lineHeight": 21,
                  },
                  Array [
                    Object {
                      "color": "rgba(0,0,0,0.87)",
                    },
                    Object {
                      "backgroundColor": "transparent",
                      "fontFamily": "System",
                      "fontWeight": "400",
                    },
                    Array [
                      Object {
                        "backgroundColor": "transparent",
                        "color": "rgba(0,0,0,0.87)",
                        "fontFamily": "System",
                        "fontWeight": "600",
                        "marginVertical": 18.46153846153846,
                      },
                      Object {
                        "backgroundColor": "transparent",
                        "color": "rgba(0, 122, 255, 255)",
                        "fontFamily": "System",
                        "fontWeight": "700",
                      },
                    ],
                  ],
                ]
              }
            >
              Clear all
            </Text>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "flex": 1,
                "height": "100%",
                "justifyContent": "center",
                "paddingHorizontal": 16,
              }
            }
            testID="history-item"
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "borderBottomColor": "rgba(229, 229, 234, 255)",
                  "borderBottomWidth": 1,
                  "flexDirection": "row",
                  "height": 50,
                  "justifyContent": "space-between",
                }
              }
            >
              <Text
                style={
                  Array [
                    false,
                    Object {
                      "backgroundColor": "transparent",
                      "color": "#000000",
                      "fontFamily": "System",
                      "fontSize": 17,
                      "fontWeight": "600",
                      "letterSpacing": -0.408,
                      "lineHeight": 22,
                    },
                    false,
                    false,
                    Array [
                      Object {
                        "color": "rgba(0,0,0,0.87)",
                      },
                      Object {
                        "backgroundColor": "transparent",
                        "fontFamily": "System",
                        "fontWeight": "400",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                john
              </Text>
              <View
                accessible={true}
                focusable={true}
                hitSlop={
                  Object {
                    "bottom": 50,
                    "left": 50,
                    "right": 50,
                    "top": 50,
                  }
                }
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#F5F5F5",
                    "borderRadius": 10,
                    "height": 22,
                    "justifyContent": "center",
                    "opacity": 1,
                    "width": 22,
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  style={
                    Object {
                      "color": "rgba(0,0,0,0.87)",
                      "fontFamily": "Ionicons",
                      "fontSize": 25,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    }
                  }
                  text="ionicon-ios-close"
                />
              </View>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "flex": 1,
                "height": "100%",
                "justifyContent": "center",
                "paddingHorizontal": 16,
              }
            }
            testID="history-item"
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "borderBottomColor": "rgba(229, 229, 234, 255)",
                  "borderBottomWidth": 1,
                  "flexDirection": "row",
                  "height": 50,
                  "justifyContent": "space-between",
                }
              }
            >
              <Text
                style={
                  Array [
                    false,
                    Object {
                      "backgroundColor": "transparent",
                      "color": "#000000",
                      "fontFamily": "System",
                      "fontSize": 17,
                      "fontWeight": "600",
                      "letterSpacing": -0.408,
                      "lineHeight": 22,
                    },
                    false,
                    false,
                    Array [
                      Object {
                        "color": "rgba(0,0,0,0.87)",
                      },
                      Object {
                        "backgroundColor": "transparent",
                        "fontFamily": "System",
                        "fontWeight": "400",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                doe
              </Text>
              <View
                accessible={true}
                focusable={true}
                hitSlop={
                  Object {
                    "bottom": 50,
                    "left": 50,
                    "right": 50,
                    "top": 50,
                  }
                }
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#F5F5F5",
                    "borderRadius": 10,
                    "height": 22,
                    "justifyContent": "center",
                    "opacity": 1,
                    "width": 22,
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  style={
                    Object {
                      "color": "rgba(0,0,0,0.87)",
                      "fontFamily": "Ionicons",
                      "fontSize": 25,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    }
                  }
                  text="ionicon-ios-close"
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;
